--- a/frontend/landing/app/package.json
+++ b/frontend/landing/app/package.json
@@ -25,6 +25,7 @@
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "17.0.34",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
