--- a/frontend/fragments/landing-state-action/package.json
+++ b/frontend/fragments/landing-state-action/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "main": "src/index.ts",
   "dependencies": {
+    "@ui/button": "workspace:frontend/ui/button",
     "@ui/layout": "workspace:frontend/ui/layout",
     "@ui/text": "workspace:frontend/ui/text"
   },
